@@ -2,8 +2,9 @@ package com.codestates.hobby.global.config;
 
 import static org.springframework.security.config.Customizer.*;
 
-import java.util.Arrays;
+import java.util.List;
 
+import com.codestates.hobby.domain.auth.service.UserDetailsServiceImpl;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -25,7 +26,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import com.codestates.hobby.domain.auth.filter.JsonAuthenticationFilter;
 import com.codestates.hobby.domain.auth.handler.CustomLoginFailureHandler;
 import com.codestates.hobby.domain.auth.handler.CustomLoginSuccessHandler;
-import com.codestates.hobby.domain.auth.service.LoginService;
 import com.codestates.hobby.domain.member.repository.MemberRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -38,7 +38,7 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 public class SecurityConfig {
 	private final ObjectMapper objectMapper;
-	private final LoginService loginService;
+	private final UserDetailsServiceImpl userDetailsService;
 	private final MemberRepository memberRepository;
 
 	@Bean
@@ -50,9 +50,12 @@ public class SecurityConfig {
 			.formLogin().disable()
 			.httpBasic().disable();
 		http.authorizeHttpRequests(authorize -> authorize
-			.mvcMatchers(HttpMethod.GET, "/**").permitAll()
-			.mvcMatchers(HttpMethod.POST, "/members", "/login").permitAll()
-			.anyRequest().authenticated());
+			// TODO: 추가하기
+/*			.antMatchers(HttpMethod.POST,"/series", "/showcases", "/posts").authenticated()
+			.antMatchers(HttpMethod.PATCH,"/members", "/series", "/showcases", "/posts").authenticated()
+            .antMatchers(HttpMethod.DELETE,"/members", "/series", "/showcases", "/posts").authenticated()
+            .antMatchers(HttpMethod.GET,"/members").authenticated()*/
+			.anyRequest().permitAll());
 		http.sessionManagement()
 			.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
 			.maximumSessions(1)
@@ -68,8 +71,9 @@ public class SecurityConfig {
 	@Bean
 	CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("*"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE"));
+		configuration.setAllowedOrigins(List.of("*"));
+		configuration.setAllowedHeaders(List.of("*"));
+		configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE", "OPTIONS", "HEAD"));
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
@@ -85,7 +89,7 @@ public class SecurityConfig {
 	public AuthenticationManager authenticationManager() {
 		DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
 		provider.setPasswordEncoder(passwordEncoder());
-		provider.setUserDetailsService(loginService);
+		provider.setUserDetailsService(userDetailsService);
 		return new ProviderManager(provider);
 	}
 
